Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2014-11-22 (SVN):
    * gl_screen.c (SCR_ScreenShot_f): make sure we don't Sys_Error()
      due to buffer allocation failures.
    * bumped the version date stamp to 2014-11-22.

2014-10-20 (SVN):
    * fix issues on Windows systems with DPI scaling.
    * bumped the version date stamp to 2014-10-20.

2014-10-18 (SVN):
    * make sure that SDL_Quit() is called upon exit.

2014-10-10 (SVN):
    * engine/h2shared/common.c: override the stock djgpp versions of
      stricmp and strnicmp by our own q_strcasecmp and q_strncasecmp.
    * bumped the version date stamp to 2014-10-10.

2014-08-25 (SVN):
    * Revert Pa3PyX solution for cross-map demos, apply Baker's fix
      instead (http://forums.inside3d.com/viewtopic.php?f=3&t=2397).

2014-07-01 (SVN):
    * move MAX_OSPATH definition to q_stdinc.h. define it as PATH_MAX,
      or as MAXPATHLEN, _MAX_PATH, MAX_PATH, or CCHMAXPATH if either of
      them is available, or as 1024 if none are available. this would
      make us safer in deep installation directory paths.  darkplaces
      engine seems to do the same.
    * remove USE_PASSWORD_FILE compile time option for the unix builds
      and use it unconditionally already.

2014-06-28 (SVN):
    * utils, jsh2color: ignore minlight values from the -light command
      line switch: eliminates the majority of the ugly black patches
      from eidolon and rider2c maps. bump its version to 1.2.6.
    * bumped the version date stamp to 2014-06-28.

2014-06-15 (SVN):
    * SDLMain.m: replace CPS* stuff with activateIgnoringOtherApps.

      CPS stuff are deprecated and emit warnings at runtime, e.g.:
	warning: CPSGetCurrentProcess(): This call is deprecated and
		 should not be called anymore
	warning: CPSSetForegroundOperationState() (as above)
	warning: capture_display; Captured mirror master 0x350000c1
		 (unit 1) on behalf of slave 0x042716c0 (unit 0)
